# schoolar-control-api

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 11bf323fbefe_implementación_completa_de_modelos.py  8abcf360319f_migración_inicial_modelos_de_usuario_y_.py
schoolar_control_api/database/: connection.py  models.py  repository.py
